--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,10 +1,14 @@
-body, html {height: 100%}
+html {
+	font-family: helvetica;
+}
 
 .backgroundImg 
 {	
-	background-image: url('../blur.jpg');
-	min-height: 100%;
-	background-position: center;
+	background: url('../blur2.jpg');
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+	height: 100%;
 	background-size: cover;
 	overflow:hidden;
 }
@@ -13,7 +17,7 @@ body, html {height: 100%}
 	position: absolute;
 	top:0;
 	left:0;
-	height: 80px;
+	height: 100px;
 	width: 100%;
     background: -webkit-linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0));
     background: -o-linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0));
@@ -38,7 +42,6 @@ a {
 	color: white;
 	font-size: 19px;
 	font-weight: bold;
-	font-family: Arial;
 }
 
 
@@ -53,7 +56,7 @@ a {
 }
 
 h1 {
-	color: black;
+	color: white;
 	font-style: italic;
 	text-align: center;
 	font-size:64px;
@@ -66,6 +69,7 @@ h1 {
     border-width: 1px 0px 0px 0px;
     border-radius: 30px;
 	margin-bottom: -61px;
+	color: white;
 }
 
 .fake-hr2 { 
@@ -73,11 +77,12 @@ h1 {
     border-style: solid;
     border-width: 0px 0px 1px 0px;
     border-radius: 30px;
+	color: white;
 }
 
 .lowerText {
 	margin: 20px;
-	font-family: Papyrus, fantasy;
+	color: white;
 	font-size: 24px;
 	font-style: italic;
 	font-weight: bold;
@@ -86,16 +91,14 @@ h1 {
 
 
 #hidden-login {
-	display: none; /* todo: change to none */
+	display: none;
 	position: absolute;
 	top: 80px;
 	right: 20px;
 	padding: 20px;
-	height: 240px;
 	width: 200px;
 	border-radius: 20px;
 	color: white;
-	font-family: Verdana, Geneva, sans-serif;
     background: -webkit-linear-gradient(left top, #939292, #3a3a3a);
     background: -o-linear-gradient(bottom right, #939292, #3a3a3a);
     background: -moz-linear-gradient(bottom right, #939292, #3a3a3a); 
