--- a/client/controlpanel/css/main.css
+++ b/client/controlpanel/css/main.css
@@ -7,20 +7,24 @@ body {
 }
 html{
 	height: 100%;
-	font-family:Helvetica;
+	font-family: 'Roboto', Helvetica;
 }
 
 /*-----------------------------Nav Bar-------------------------------------------*/
 
-.navbar{
-	z-index: 1;
+.navbar{	
+	border-bottom: solid;
+	border-color: #009b09
+}
+
+.nav{
+	color:#009b09 !important;
 }
 
 .navbar-brand {
   	color:#009b09 !important;
   	font-size: 40px;
  	margin: 0px;
-
 }
 .navbar-brand:hover{
 	color:#007a2a !important;
@@ -32,33 +36,100 @@ html{
 }
 
 .navbar-right li a:hover{
-	color:#007a2a !important;
+	color:#ffffff !important;
 }
 
 .leaf li a:hover{
 	color:#007a2a !important;
 }
-/*---------------------------------NavBar End--------------------------------------------*/
 
-h1 {	
-  	color:black;
-  	height: 2%;
-	width: 100%;
-  	/*margin-left: 3%;*/
+/*---------------------------------NavBar End--------------------------------------------*/
+/*-------------------------------Begin Sidebar-------------------------------------------*/
+
+#sidebar {
+	z-index: 1000;
+	width: inherit;
+	min-width: 250px;
+	max-width: 250px;
+	background-color:#232323;
+	float: left;
+	height:100%;
+	position:relative;
+	overflow-y:auto;
+	overflow-x:auto;
+	position: fixed;
+	border-right: none;
+	border-color: #009b09;
  }
 
-h2 {
-	color: white;
-	background-color: #009b09;
-	height: 3%;
-	width:100%;
-	text-align: center;
-	margin-left: 0%;
-	margin-right: 0%;
+@media screen and (max-width: 800px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all 0.30s ease-out;
+    -moz-transition: all 0.30s ease-out;
+    transition: all 0.30s ease-out;
+    width:calc(100% + 20px);
+  }
+    
+  .row-offcanvas-left
+  {
+    left: -250px;
   }
 
+  .row-offcanvas-left.active {
+    left: 0;
+  }
+
+  .sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+  }
+}
+
+.col-xs-12 li a{
+	color: #bcbcbc !important;
+}
+
+.dropdown a:active{
+	color: #009b09 !important;
+}
+
+
+.dropdown-menu li:hover{
+	color: #009b09 !important;
+}
+
+.dropdown-menu li:active{
+	color: #009b09 !important;
+}
+
+.dropdown-menu {
+	position: relative;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	border-radius: 0;
+	border:none;
+	background-color: #232323;
+	box-shadow: none;
+}
+
+.nav li a:hover{
+	background-color: #009b09 !important;
+}
+
+/*---------------------------End side Bar-----------------------*/
+/*-------------------------Begin Stage------------------------*/
+
+#stage {
+ margin-left: 253px;
+  height:100%;
+  overflow:auto;
+  position: auto;
+  width: 81%;
+}
+
 #panel{ 
-	float: left; 
 	width: 100%; 
 	
 }
@@ -71,13 +142,13 @@ h2 {
   
 #panel.inner_panel li {
 	border-bottom: 1px solid #bbb;
-	margin-left: %;
+	margin-left: 0;
 }
   
 #panel.inner_panel ul {		
 	list-style-type: none;
     	overflow: hidden;
-    	width: 90%;
+    	width: 100%;
     	margin-left: 2%;
 }
 
@@ -93,8 +164,6 @@ h2 {
 	text-decoration: underline;
 }
 
-
-
 #version{
 	position:fixed;
     	bottom:0;
@@ -103,6 +172,34 @@ h2 {
 
 hr {
 	border: 1px solid #ccc;
+}
+
+/*---------------------------End Stage--------------------*/
+h1 {	
+  	color:black;
+  	height: 2%;
+	width: 100%;
+  	/*margin-left: 3%;*/
+ }
+
+h2 {
+	color: white;
+	background-color: #009b09;
+	height: 3%;
+	width:100%;
+	text-align: center;
+	margin-left: 0%;
+	margin-right: 0%;
+}
+
+h3{
+	padding-left: 0;
+	margin-left: 0;
+}
+
+hr {
+	color: #009b09;
+	background-color: #009b09;
 }
 
 .EasterEgg {
