--- a/client/controlpanel/css/main.css
+++ b/client/controlpanel/css/main.css
@@ -17,10 +17,6 @@ html{
 	border-color: #009b09
 }
 
-.nav{
-	color:#009b09 !important;
-}
-
 .navbar-brand {
   	color:#009b09 !important;
   	font-size: 40px;
@@ -117,6 +113,29 @@ html{
 .nav li a:hover{
 	background-color: #009b09 !important;
 }
+
+.nav{
+	color:#009b09 !important;
+	list-style-position: inside;
+}
+
+.nav li{
+	max-width: 220px;
+	overflow: hidden;
+  	white-space: nowrap;
+  	text-overflow: ellipsis;
+}
+.nav a{
+	max-width: 190px;
+	overflow: hidden;
+  	white-space: nowrap;
+  	text-overflow: ellipsis;
+
+}
+.glyphicon-cog:hover{
+	color:#bcbcbc;
+}
+
 
 /*---------------------------End side Bar-----------------------*/
 /*-------------------------Begin Stage------------------------*/
