--- a/client/controlpanel/css/main.css
+++ b/client/controlpanel/css/main.css
@@ -179,6 +179,29 @@ html{
 }
 
 
+.nav{
+	color:#009b09 !important;
+	list-style-position: inside;
+}
+
+.nav li{
+	max-width: 220px;
+	overflow: hidden;
+  	white-space: nowrap;
+  	text-overflow: ellipsis;
+}
+.nav a{
+	max-width: 190px;
+	overflow: hidden;
+  	white-space: nowrap;
+  	text-overflow: ellipsis;
+
+}
+.glyphicon-cog:hover{
+	color:#bcbcbc;
+}
+
+
 /*---------------------------End side Bar-----------------------*/
 /*-------------------------Begin Stage------------------------*/
 
