style in render()

--- a/client/controlpanel/css/index.css
+++ b/client/controlpanel/css/index.css
@@ -4,7 +4,7 @@ html {
 
 .backgroundImg 
 {	
-	background: url('../blur2.jpg');
+	background: url('../blur.jpg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
