--- a/client/controlpanel/css/gmain.css
+++ b/client/controlpanel/css/gmain.css
@@ -1,68 +1,68 @@
 body {
-	/*margin: 1% 1% 1% 1%;*/
-	margin: 0 0 0 0;
-	background-color:  #e8e8e8; /*Full page background*/
-	color: black;
+    /*margin: 1% 1% 1% 1%;*/
+    margin: 0 0 0 0;
+    background-color:  #e8e8e8; /*Full page background*/
+    color: black;
 }
 html{
-	height: 100%;
-	font-family:Helvetica;
+    height: 100%;
+    font-family: "Helvetica", sans-serif;
 }
 
 hr {
-	border: 1px solid #ccc;
+    border: 1px solid #ccc;
 }
 /*-----------------------------Nav Bar-------------------------------------------*/
 
 .navbar{
-	border-bottom: solid;
-	border-color: #009b09
+    border-bottom: solid;
+    border-color: #009b09
 }
 
 .navbar-brand {
-  	color:#009b09 !important;
-  	font-size: 40px;
- 	margin: 0px;
+    color:#009b09 !important;
+    font-size: 40px;
+    margin: 0px;
 }
 .navbar-brand:hover{
-	color:#007a2a !important;
+    color:#007a2a !important;
 }
 
 .navbar-right a{
-	color:#009b09 !important;
-	font-size: 17px;
+    color:#009b09 !important;
+    font-size: 17px;
 }
 
 .navbar-right li a:hover{
-	color:#ffffff !important;
+    color:#ffffff !important;
 }
 
 .leaf li a:hover{
-	color:#007a2a !important;
+    color:#007a2a !important;
 }
 
 .nav .open > a, .nav .open > a:focus, .nav .open > a:hover{
-	background-color: #232323 !important;
- }
-.nav{
-	color:#009b09 !important;
-	list-style-position: inside;
+    background-color: #232323 !important;
 }
+
+.nav{
+    color:#009b09 !important;
+}
+list-style-position: inside;
 /*---------------------------------NavBar End--------------------------------------------*/
 
 h1 {
-  	color:black;
-  	height: 2%;
-	width: 100%;
- }
+    color:black;
+    height: 2%;
+    width: 100%;
 
+}
 .plantRender{
     font-size: 18px;
 }
 
 .plantRender li{
     list-style-type: none;
-
 }
 
 .plantRender a{
@@ -81,38 +81,38 @@ h1 {
 }
 
 .pageList{
-	width: 95%;
-
+    width: 95%;
 }
+
 .groupList{
-	height: 100%;
+    height: 100%;
 }
 
 .plantList{
-	width:85%;
+    width:85%;
 }
 
 .plantList ul{
-	border-style: solid;
+    border-style: solid;
 }
 
 .groupList a{
-	font-size: 17px;
+    font-size: 17px;
     text-decoration: none;
-	color: #009b09;
-	font-weight: bold;
+    color: #009b09;
+    font-weight: bold;
 }
 .groupList a:hover{
     color: #232323;
 }
 
 .groupList li{
-	list-style-type: none;
+    list-style-type: none;
 }
 
 .groupElement{
-	border-bottom: solid;
-	border-width: .1px
+    border-bottom: solid;
+    border-width: .1px
 }
 
 .EasterEgg {
@@ -130,11 +130,11 @@ h1 {
 }
 
 .EasterEgg-content {
-	background-color: #131313;
-	margin: auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 50%;
+    background-color: #131313;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
 }
 
 .close {
