--- a/client/controlpanel/css/main.css
+++ b/client/controlpanel/css/main.css
@@ -178,6 +178,17 @@ html{
     color:#bcbcbc;
 }
 
+select {
+    border: none;
+    color: #ddd;
+    background: transparent;
+    font-weight: bold;
+    padding: 5px;
+    -moz-border-radius: 9px 9px 9px 9px;
+    -webkit-border-radius: 9px 9px 9px 9px;
+    border-radius: 9px 9px 9px 9px;
+    background-color: #58B14C;
+}
 
 /*---------------------------End side Bar-----------------------*/
 /*-------------------------Begin Stage------------------------*/
